Fix contrast issue on main page (for accessibility)

--- a/static/style-mainpage.css
+++ b/static/style-mainpage.css
@@ -21,3 +21,8 @@
 .post_ul {
     margin-top: 16px;
 }
+
+/* Accessibility (contrast) */
+a {
+    color: #0c009f;
+}
